--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, rerum cumque aliquam itaque a voluptate. Possimus fugiat facere ducimus fugit repudiandae expedita aliquid magni, soluta iusto saepe velit provident numquam?
+            </p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de Java Script</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus voluptatum debitis fuga temporibus molestiae odit eos, quod rerum nemo alias hic cum natus, atque voluptatibus consequuntur laudantium suscipit expedita maiores.</p>
         </article>
     </main>
     
