--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <main>
         <header>
             <h1>Cursos GrÃ¡tis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, rerum cumque aliquam itaque a voluptate. Possimus fugiat facere ducimus fugit repudiandae expedita aliquid magni, soluta iusto saepe velit provident numquam?
-            </p>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso em Video">
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5 </a></p>
+                
         </article>
         <article>
             <h2>Curso de Java Script</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus voluptatum debitis fuga temporibus molestiae odit eos, quod rerum nemo alias hic cum natus, atque voluptatibus consequuntur laudantium suscipit expedita maiores.</p>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso em Video">
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>. <p>
+                <p><a href="curso-js.html">o curso de JavaScript</a> </p>   
         </article>
     </main>
     
