--- a/curso-html.html
+++ b/curso-html.html
@@ -12,7 +12,7 @@
             <h1>Curso de HTML5 e CSS3</h1>
         </header>
         <article>
-            <p>A <abbr title="HyperText Markup Language">HTML</abbr> √© uma linguagem de marca√ß√£o para a cria√ß√£o de sites. Atualmente na vers√£o 5, ela usa a sem√¢ntica dos elementos para criar o conte√∫do de uma p√°gina Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configura√ß√µes visuais que um site vai ter.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> È uma linguagem de marcaÁ„o para a criaÁ„o de sites. Atualmente na vers„o 5, ela usa a sem‚ntica dos elementos para criar o conte˙do de uma p·gina Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configuraÁıes visuais que um site vai ter.</p>
 
             <iframe width="560" height="315" src="https://www.youtube.com/embed/riSVzwlSnhw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
