--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
             <img class="lado" src="imagens/curso-html-css.png" alt="Curso em Video">
-            <p>A <abbr title="HyperText Markup Language">HTML</abbr> … uma linguagem de marcaÁ„o para a criaÁ„o de sites. Atualmente na vers„o 5, ela usa a sem‚ntica dos elementos para criar o conte˙do de uma p·gina Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configuraÁıes visuais que um site vai ter.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> √â uma linguagem de marca√ß√£o para a cria√ß√£o de sites. Atualmente na vers√£o 5, ela usa a sem√¢ntica dos elementos para criar o conte√∫do de uma p√°gina Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configura√ß√µes visuais que um site vai ter.</p>
             <p><a href="curso-html.html">Acesse o curso de HTML5 </a></p>
                 
         </article>
         <article>
             <h2>Curso de Java Script</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso em Video">
-            <p><abbr title="JavaScript">JavaScript</abbr> … uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os cÛdigos em JS s„o executados dentro do navegador e d· acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>. <p>
+            <p><abbr title="JavaScript">JavaScript</abbr> √â uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os c√≥digos em JS s√£o executados dentro do navegador e d√° acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>. <p>
                 <p><a href="curso-js.html">o curso de JavaScript</a> </p>
                 <p></p>   
         </article>
