--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <h2>Curso de Java Script</h2>
             <img class="lado" src="imagens/curso-javascript.png" alt="Curso em Video">
             <p><abbr title="JavaScript">JavaScript</abbr> É uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dá acesso aos elementos HTML por meio do <abbr title="Document Object Model">DOM</abbr>. <p>
-                <p><a href="curso-js.html">o curso de JavaScript</a> </p>
-                <p></p>   
+                <p><a href="curso-js.html">Acesse o curso de JavaScript</a> </p>
+                   
         </article>
     </main>
     
